--- a/index.html
+++ b/index.html
@@ -2,94 +2,137 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Свадебное приглашение</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #fff9f9;
-            text-align: center;
-            color: #333;
-        }
-        .container {
-            padding: 20px;
-        }
-        .photo {
-            display: inline-block;
-            margin: 20px;
-        }
-        .photo img {
-            width: 220px;
-            height: auto;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-        .caption {
-            margin-top: 8px;
-            font-weight: bold;
-        }
-        h1 {
-            margin: 30px 0;
-            font-size: 28px;
-        }
-        .details {
-            font-size: 18px;
-            margin: 30px 0;
-        }
-        .rsvp {
-            background-color: #ffe6e6;
-            padding: 20px;
-            border-radius: 10px;
-            display: inline-block;
-        }
-        input, button {
-            margin: 5px 0;
-            padding: 10px;
-            width: 100%;
-            max-width: 300px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        button {
-            background-color: #ff7f7f;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #e06060;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Свадебное приглашение</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: linear-gradient(to bottom, #fff1f5, #ffe4ec);
+      color: #333;
+      overflow-x: hidden;
+    }
+    header {
+      padding: 40px 20px 20px;
+      text-align: center;
+      background-color: transparent;
+    }
+    header h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 36px;
+      color: #d94f70;
+    }
+    .photos {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 40px;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+    .photo-frame {
+      background: white;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .photo-frame img {
+      width: 220px;
+      border-radius: 10px;
+    }
+    .caption {
+      font-weight: bold;
+      margin-top: 8px;
+    }
+    .love-equation {
+      text-align: center;
+      font-size: 28px;
+      margin: 40px 0 20px;
+      font-family: 'Pacifico', cursive;
+      color: #e64774;
+    }
+    .details {
+      text-align: center;
+      font-size: 18px;
+      margin-bottom: 60px;
+    }
+    .rsvp-section {
+      background-color: #fff0f5;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    .rsvp-section h2 {
+      font-family: 'Pacifico', cursive;
+      color: #d94f70;
+    }
+    .rsvp-form input, .rsvp-form button {
+      padding: 10px;
+      margin: 10px auto;
+      display: block;
+      width: 90%;
+      max-width: 320px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .rsvp-form button {
+      background-color: #ff7f9f;
+      color: white;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .rsvp-form button:hover {
+      background-color: #e46480;
+    }
+    footer {
+      text-align: center;
+      font-size: 14px;
+      padding: 20px;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="photo">
-            <img src="shahlo.jpg" alt="Шахло">
-            <div class="caption">Шахло</div>
-        </div>
-        <div class="photo">
-            <img src="erkin.jpg" alt="Эркин">
-            <div class="caption">Эркин</div>
-        </div>
+  <header>
+    <h1>Эркин & Шахло</h1>
+  </header>
 
-        <h1>Э + Ш = ❤️</h1>
-
-        <div class="details">
-            С радостью приглашаем вас на нашу свадьбу!<br><br>
-            📅 <strong>15 августа</strong><br>
-            📍 <strong>Ресторан Zarkhal Premium</strong><br>
-        </div>
-
-        <div class="rsvp">
-            <h2>Подтвердите участие</h2>
-            <form>
-                <input type="text" name="name" placeholder="Ваше имя" required><br>
-                <input type="tel" name="phone" placeholder="Номер телефона" required><br>
-                <button type="submit">Я приду!</button>
-            </form>
-        </div>
+  <section class="photos">
+    <div class="photo-frame">
+      <img src="shahlo.jpg" alt="Шахло" />
+      <div class="caption">Шахло</div>
     </div>
+    <div class="photo-frame">
+      <img src="erkin.jpg" alt="Эркин" />
+      <div class="caption">Эркин</div>
+    </div>
+  </section>
+
+  <section class="love-equation">
+    Э + Ш = ❤️
+  </section>
+
+  <section class="details">
+    <p>С радостью приглашаем вас на нашу свадьбу!</p>
+    <p>📅 <strong>15 августа</strong></p>
+    <p>📍 <strong>Ресторан Zarkhal Premium</strong></p>
+  </section>
+
+  <section class="rsvp-section">
+    <h2>Подтвердите участие</h2>
+    <form class="rsvp-form">
+      <input type="text" name="name" placeholder="Ваше имя" required />
+      <input type="tel" name="phone" placeholder="Номер телефона" required />
+      <button type="submit">Я приду!</button>
+    </form>
+  </section>
+
+  <footer>
+    С любовью, Эркин & Шахло
+  </footer>
 </body>
 </html>
