--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       background: linear-gradient(to bottom, #fff1f5, #ffe4ec);
       color: #333;
       overflow-x: hidden;
+      scroll-behavior: smooth;
     }
     header {
       padding: 40px 20px 20px;
       text-align: center;
-      background-color: transparent;
     }
     header h1 {
       font-family: 'Pacifico', cursive;
@@ -27,7 +27,6 @@
     .photos {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
       flex-wrap: wrap;
       gap: 40px;
       margin: 20px auto;
@@ -48,26 +47,19 @@
       font-weight: bold;
       margin-top: 8px;
     }
-    .love-equation {
-      text-align: center;
-      font-size: 28px;
-      margin: 40px 0 20px;
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .love-equation, h2 {
       font-family: 'Pacifico', cursive;
       color: #e64774;
-    }
-    .details {
-      text-align: center;
-      font-size: 18px;
-      margin-bottom: 60px;
-    }
-    .rsvp-section {
-      background-color: #fff0f5;
-      padding: 40px 20px;
       text-align: center;
     }
-    .rsvp-section h2 {
-      font-family: 'Pacifico', cursive;
-      color: #d94f70;
+    .info p, .story p, .speech p, .guests p {
+      line-height: 1.6;
+      margin-bottom: 12px;
     }
     .rsvp-form input, .rsvp-form button {
       padding: 10px;
@@ -113,16 +105,47 @@
   </section>
 
   <section class="love-equation">
-    Э + Ш = ❤️
+    <h2>Э + Ш = ❤️</h2>
   </section>
 
-  <section class="details">
-    <p>С радостью приглашаем вас на нашу свадьбу!</p>
-    <p>📅 <strong>15 августа</strong></p>
-    <p>📍 <strong>Ресторан Zarkhal Premium</strong></p>
+  <section class="story">
+    <h2>Наша история</h2>
+    <p>Когда-то давно, когда ни один из нас не знал, что любовь может начаться с простого взгляда… мы просто встретились.</p>
+    <p>Это была не «любовь с первого взгляда», а скорее — знакомство, из которого выросла дружба, наполненная смехом, поддержкой и заботой.</p>
+    <p>Мы были разными, но в этом и было волшебство: как будто два пазла из разных коробок вдруг идеально подошли друг другу.</p>
+    <p>Сначала — бесконечные разговоры, потом — долгие прогулки, потом — мы.</p>
+    <p>С каждым днём мы становились ближе. И теперь, спустя всё пройденное, мы уверенно говорим: Э + Ш = ❤️ навсегда.</p>
   </section>
 
-  <section class="rsvp-section">
+  <section class="info">
+    <h2>Информация о свадьбе</h2>
+    <p><strong>Дата:</strong> 15 августа 2025 года</p>
+    <p><strong>Время:</strong> 18:00</p>
+    <p><strong>Место:</strong> Ресторан Zarkhal Premium</p>
+    <p>🎉 Вас ждут: живая музыка, красивая церемония, вкусный плов и танцы до утра!</p>
+    <p>💡 Если вы хотите прийти в белом — предупредите невесту заранее 😉</p>
+  </section>
+
+  <section class="speech">
+    <h2>Слова от молодожёнов</h2>
+    <p>Дорогие наши,</p>
+    <p>Мы счастливы, что в этот день рядом с нами вы — самые близкие, родные и любимые.</p>
+    <p>Каждый из вас вложил частичку себя в наши судьбы. Благодаря вам мы умеем любить, прощать, смеяться и мечтать.</p>
+    <p>Спасибо за вашу веру в нас, за поддержку, за смех и за слёзы счастья.</p>
+    <p>Этот день — не только наш, он ваш тоже.</p>
+    <p><strong>Мы вас любим. Навсегда.</strong></p>
+  </section>
+
+  <section class="guests">
+    <h2>Тёплые слова для гостей</h2>
+    <p>👵 Бабушка, ты как плов — всегда тёплая, ароматная и без тебя не обходится ни один праздник.</p>
+    <p>👨‍👩‍👧‍👦 Родители, благодаря вам мы знаем, как выглядит настоящая любовь и терпение. Без вас — никак.</p>
+    <p>👯‍♂️ Друзья, без вас эта свадьба была бы просто ужином. Спасибо за музыку нашей молодости, за советы, и за «а помнишь?..»</p>
+    <p>💼 Коллеги, мы рады видеть вас не в Zoom, а на танцполе! Поднимем бокалы не за дедлайны, а за любовь.</p>
+    <p>💃 Каждому из вас — спасибо, что вы с нами. Пусть это приглашение станет началом самого весёлого вечера в году!</p>
+  </section>
+
+  <section class="rsvp">
     <h2>Подтвердите участие</h2>
     <form class="rsvp-form">
       <input type="text" name="name" placeholder="Ваше имя" required />
