--- a/index.html
+++ b/index.html
@@ -4,158 +4,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Свадебное приглашение</title>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans&display=swap" rel="stylesheet">
+  <title>Свадьба Эркин и Шахло</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background: linear-gradient(to bottom, #fff1f5, #ffe4ec);
-      color: #333;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(145deg, #ffffff, #00fff7, #000000);
+      background-size: 200% 200%;
+      animation: gradientShift 15s ease infinite;
+      color: #fff;
+    }
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
     header {
-      padding: 40px 20px 20px;
       text-align: center;
+      padding: 4rem 1rem;
+      background: rgba(0, 0, 0, 0.7);
     }
     header h1 {
-      font-family: 'Pacifico', cursive;
-      font-size: 36px;
-      color: #d94f70;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      color: #00fff7;
+      margin-bottom: 0.5rem;
     }
-    .photos {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin: 20px auto;
-      max-width: 800px;
-    }
-    .photo-frame {
-      background: white;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .photo-frame img {
-      width: 220px;
-      border-radius: 10px;
-    }
-    .caption {
-      font-weight: bold;
-      margin-top: 8px;
+    header h2 {
+      font-size: 1.5rem;
+      color: #ffffff;
     }
     section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: 0 auto;
+      padding: 2.5rem 1.5rem;
+      border-top: 1px solid #ffffff33;
+      background-color: rgba(0, 0, 0, 0.6);
     }
-    .love-equation, h2 {
-      font-family: 'Pacifico', cursive;
-      color: #e64774;
-      text-align: center;
+    section h2 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      color: #00fff7;
+      margin-bottom: 1rem;
     }
-    .info p, .story p, .speech p, .guests p {
+    section p {
+      font-size: 1.2rem;
       line-height: 1.6;
-      margin-bottom: 12px;
     }
-    .rsvp-form input, .rsvp-form button {
-      padding: 10px;
-      margin: 10px auto;
-      display: block;
-      width: 90%;
-      max-width: 320px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    .rsvp-form button {
-      background-color: #ff7f9f;
-      color: white;
+    iframe {
+      width: 100%;
+      height: 300px;
       border: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .rsvp-form button:hover {
-      background-color: #e46480;
+      border-radius: 8px;
     }
     footer {
       text-align: center;
-      font-size: 14px;
-      padding: 20px;
-      color: #888;
+      padding: 2rem;
+      font-size: 1rem;
+      color: #ccc;
+      background-color: rgba(0,0,0,0.8);
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Эркин & Шахло</h1>
+    <h1>Эркин + Шахло = ❤️</h1>
+    <h2>Вы приглашены на нашу свадьбу</h2>
   </header>
 
-  <section class="photos">
-    <div class="photo-frame">
-      <img src="shahlo.jpg" alt="Шахло" />
-      <div class="caption">Шахло</div>
-    </div>
-    <div class="photo-frame">
-      <img src="erkin.jpg" alt="Эркин" />
-      <div class="caption">Эркин</div>
-    </div>
-  </section>
-
-  <section class="love-equation">
-    <h2>Э + Ш = ❤️</h2>
-  </section>
-
-  <section class="story">
+  <section>
     <h2>Наша история</h2>
-    <p>Когда-то давно, когда ни один из нас не знал, что любовь может начаться с простого взгляда… мы просто встретились.</p>
-    <p>Это была не «любовь с первого взгляда», а скорее — знакомство, из которого выросла дружба, наполненная смехом, поддержкой и заботой.</p>
-    <p>Мы были разными, но в этом и было волшебство: как будто два пазла из разных коробок вдруг идеально подошли друг другу.</p>
-    <p>Сначала — бесконечные разговоры, потом — долгие прогулки, потом — мы.</p>
-    <p>С каждым днём мы становились ближе. И теперь, спустя всё пройденное, мы уверенно говорим: Э + Ш = ❤️ навсегда.</p>
+    <p>Мы встретились случайно, но с первой минуты поняли — это судьба. Один взгляд, одна улыбка — и началась наша история, которая теперь ведёт к самому счастливому дню.</p>
   </section>
 
-  <section class="info">
-    <h2>Информация о свадьбе</h2>
-    <p><strong>Дата:</strong> 15 августа 2025 года</p>
-    <p><strong>Время:</strong> 18:00</p>
-    <p><strong>Место:</strong> Ресторан Zarkhal Premium</p>
-    <p>🎉 Вас ждут: живая музыка, красивая церемония, вкусный плов и танцы до утра!</p>
-    <p>💡 Если вы хотите прийти в белом — предупредите невесту заранее 😉</p>
+  <section>
+    <h2>О Свадьбе</h2>
+    <p>📅 Дата: 15 августа 2025<br>
+       🕕 Время: 18:00<br>
+       📍 Место: Ресторан Zarkhal Premium</p>
   </section>
 
-  <section class="speech">
-    <h2>Слова от молодожёнов</h2>
-    <p>Дорогие наши,</p>
-    <p>Мы счастливы, что в этот день рядом с нами вы — самые близкие, родные и любимые.</p>
-    <p>Каждый из вас вложил частичку себя в наши судьбы. Благодаря вам мы умеем любить, прощать, смеяться и мечтать.</p>
-    <p>Спасибо за вашу веру в нас, за поддержку, за смех и за слёзы счастья.</p>
-    <p>Этот день — не только наш, он ваш тоже.</p>
-    <p><strong>Мы вас любим. Навсегда.</strong></p>
+  <section>
+    <h2>Как нас найти</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47983.698211138625!2d69.2400730900572!3d41.311081632150096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b6c0e25f13f%3A0x6ff706f9799851ff!2sZarkhal%20Premium!5e0!3m2!1sru!2s!4v1694000000000!5m2!1sru!2s" allowfullscreen loading="lazy"></iframe>
   </section>
 
-  <section class="guests">
-    <h2>Тёплые слова для гостей</h2>
-    <p>👵 Бабушка, ты как плов — всегда тёплая, ароматная и без тебя не обходится ни один праздник.</p>
-    <p>👨‍👩‍👧‍👦 Родители, благодаря вам мы знаем, как выглядит настоящая любовь и терпение. Без вас — никак.</p>
-    <p>👯‍♂️ Друзья, без вас эта свадьба была бы просто ужином. Спасибо за музыку нашей молодости, за советы, и за «а помнишь?..»</p>
-    <p>💼 Коллеги, мы рады видеть вас не в Zoom, а на танцполе! Поднимем бокалы не за дедлайны, а за любовь.</p>
-    <p>💃 Каждому из вас — спасибо, что вы с нами. Пусть это приглашение станет началом самого весёлого вечера в году!</p>
+  <section>
+    <h2>Речь для молодожёнов</h2>
+    <p>Дорогие Эркин и Шахло! Пусть каждый день вашей совместной жизни будет таким же счастливым и волшебным, как этот. Пусть ваш союз будет крепким, как сталь, и светлым, как неон, освещающий ваш путь в будущее.</p>
   </section>
 
-  <section class="rsvp">
-    <h2>Подтвердите участие</h2>
-    <form class="rsvp-form">
-      <input type="text" name="name" placeholder="Ваше имя" required />
-      <input type="tel" name="phone" placeholder="Номер телефона" required />
-      <button type="submit">Я приду!</button>
-    </form>
+  <section>
+    <h2>Слова гостям</h2>
+    <p>Дорогие гости! Мы счастливы, что вы разделяете этот день с нами. Без вас наша история не была бы полной. Спасибо за вашу любовь, тепло и поддержку — вы делаете наш праздник незабываемым!</p>
   </section>
 
-  <footer>
-    С любовью, Эркин & Шахло
-  </footer>
+  <footer>С любовью, Эркин и Шахло 💫</footer>
 </body>
 </html>
